<resources>
    <string name="app_name">tino_app</string>
    <string name="get_started">Get Started</string>
    <string name="R_Name">Full name</string>
    <string name="R_Email">Valid email</string>
    <string name="R_number">Phone number</string>
    <string name="R_password">Strong Password</string>
    <string name="R_CheckBox">By checking the box you agree to our</string>
    <string name="R_Terms">Terms and Conditions.</string>
    <string name="R_Next">Next</string>
    <string name="R_LogInButton"> Already Registered ?Log In</string>
    <string name="R_CreatingFreeAcc">by creating a free account.</string>
    <string name="L_WelcomeBack">Welcome Back</string>
    <string name="L_AccessYourAccount">sign in to access your account</string>
    <string name="L_EnterPassword">Enter Password</string>
    <string name="L_EnterMail">Enter mail</string>
    <string name="L_RememberMe">Remember me</string>
    <string name="L_ForgetPassword">Forget password?</string>
    <string name="L_NewMember">New member?</string>
    <string name="L_registerNow"> Register now</string>
    <string name="welcome_image_description" />
    <string name="error_message">Error message</string>
    <string name="login">Login</string>
    <string name="about_us">About Us</string>
    <string name="pricing">Pricing</string>
    <string name="home">Home</string>
    <string name="cyclist_illustration">Cyclist Illustration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragmenta">FragmentA</string>
    <string name="pick_your_favourite">Pick Your Favourite</string>
    <string name="recipe_thumbnail">Recipe thumbnail</string>


</resources>