<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/welcome"
        android:layout_width="280dp"
        android:layout_height="210dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/L_WelcomeBack"
        android:src="@drawable/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/getStartedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/get_started"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/R_CreatingFreeAcc"
        android:textColor="#757575"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getStartedText"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/fullNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/user"
        android:hint="@string/R_Name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText" />

    <EditText
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="string"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/mail"
        android:hint="@string/R_Email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullNameInput" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="phone"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/smartphone"
        android:hint="@string/R_number"
        android:inputType="phone"
        android:padding="16dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

    <EditText
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:drawableEnd="@drawable/lock"
        android:hint="@string/R_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInput" />

    <CheckBox
        android:id="@+id/termsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/R_CheckBox"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="@string/R_Terms"
        android:textColor="#2962FF"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/termsCheckbox"
        app:layout_constraintTop_toTopOf="@id/termsCheckbox" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#6C63FF"
        android:text="@string/R_Next"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsCheckbox" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextButton">

        <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:text="@string/R_AlreadyMem"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <Button
            android:id="@+id/loggingButton"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/R_LogInButton"
            android:textColor="#6C63FF"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
